--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+ # global settings
+title: "Minorities in Marine Science"
+description: "Making marine science a more inclusive sector"
+relative_permalinks: false
 theme: jekyll-theme-cayman
