--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Minorities in Marine Science"
 description: "Making marine science a more inclusive sector"
 relative_permalinks: false
-theme: jekyll-theme-cayman
+#theme: jekyll-theme-cayman
 
 # List of links in the navigation bar
 navbar-links:
